scss/styles.scss
/* ... */
@keyframes dropHeader {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(0);
  }
}

header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    text-align: center;
    z-index: 10;
    animation-name: dropHeader;
    animation-iteration-count: 1;
    animation-timing-function: ease;
    animation-duration: 0.75s;

    ul {
        display: inline-block;
        background: $background;
        text-align: center;
        padding: 10px;
        margin: 0;
        border-bottom-right-radius: 4px;
        border-bottom-left-radius: 4px;
    }

    li {
        display: inline-block;
    }

    a {
        display: block;
        color: $base-color;
        padding: 10px;

        &:hover {
            color: $base-color-hover;
            text-decoration: none;
            background: #eee;
            border-radius: 4px;
        }

        &:focus {
            color: $base-color;
            text-decoration: none;
        }
    }

    &.active {
        display: block;
    }

    &.sticky {
        position: fixed;
        z-index: 999;
    }
}

#menu {
    &.active {
        display: block;
    }
}

#mobile-menu-open {
    display: none;
    cursor: pointer;
    position: fixed;
    right: 15px;
    top: 10px;
    color: $base-color;
    font-size: 1.5em;
    z-index: 20;
    padding: 0 7px;
    border-radius: 4px;
    background: $background;
}

#mobile-menu-close {
    display: none;
    text-align: right;
    width: 100%;
    background: $background;
    font-size: 1.5em;
    padding-right: 15px;
    padding-top: 10px;
    cursor: pointer;
    color: $base-color;

    span {
        font-size: 0.5em;
        text-transform: uppercase;
    }

    i {
        vertical-align: middle;
    }
}

footer {
    padding: 50px 0;
}

.copyright {
    padding-top: 20px;

    p {
        margin: 0;
        color: $text;
    }
}

.top {
    text-align: center;

    span {
        cursor: pointer;
        display: block;
        margin: 15px auto 0 auto;
        width: 35px;
        height: 35px;
        border-radius: 50%;
        border: 3px solid lighten($text, 25%);
        text-align:center;
    }

    i {
        color: $text;
    }
}

.social {
    text-align: right;

    ul {
        margin: 5px 0 0 0;
        padding: 0;
    }

    li {
        display: inline-block;
        font-size: 1.25em;
        list-style: none;
    }

    a {
        display: block;
        color: $text;
        padding: 10px;

        &:hover {
            color: $base-color;
        }
    }
}

.btn-rounded-white {
    display: inline-block;
    color: #fff;
    padding: 15px 25px;
    border: 3px solid #fff;
    border-radius: 30px;
    @include transition();

    &:hover {
        color: $base-color;
        background: #fff;
        text-decoration: none;
    }
}

.shadow {
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.shadow-large {
    box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
}

.heading {
    position: relative;
    display: inline-block;
    font-size: 2em;
    font-weight: 300;
    margin: 0 0 30px 0;

    &:after {
        position: absolute;
        content: '';
        top: 100%;
        height: 1px;
        width: 50px;
        left: 0;
        right: 0;
        margin: 0 auto;
        background: $base-color;
    }
}

.background-alt {
    background: $background-alt;
}

/*
    --------------------------
    ----- 4. Lead Styles -----
    --------------------------
*/

#lead {
    position: relative;
    height: 100vh;
    min-height: 500px;
    max-height: 1080px;
    background: url(../images/lead-bg.jpg);
    background-size: cover;
    padding: 15px;
    overflow: hidden;
}

#lead-content {
    position: absolute;
    z-index: 10;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;

    h1, h2 {
        margin: 0;
    }

    h1 {
        color: #fff;
        font-weight: 900;
        font-size: 5em;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        line-height: 0.9em;
    }

    h2 {
        color: lighten($base-color, 25%);
        font-weight: 500;
        font-size: 2.25em;
        margin-bottom: 15px;
    }
}

#lead-overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba($base-color-hover, 0.8);
    z-index: 1;
}

#lead-down {
    position: absolute;
    left: 0;
    right: 0;
    width: 100%;
    text-align: center;
    z-index: 10;
    bottom: 15px;
    color: #fff;

    span {
        cursor: pointer;
        display: block;
        margin: 0 auto;
        width: 35px;
        height: 35px;
        border-radius: 50%;
        border: 3px solid lighten($base-color, 25%);
        text-align:center;
    }

    i {
        animation: pulsate 1.5s ease;
        animation-iteration-count: infinite;
        padding-top: 5px;;
    }
}

@keyframes pulsate {
    0% {
        transform: scale(1, 1);
    }

    50% {
        transform: scale(1.2, 1.2);
    }

    100% {
        transform: scale(1, 1);
    }
}

/*
    ---------------------------
    ----- 5. About Styles -----
    ---------------------------
*/

#about {
    padding: 75px 15px;
    border-bottom: 1px solid $border;

    h2 {
        color: $heading;
    }

    p {
        color: $text;
        margin: 0;
    }
}

/*
    --------------------------------
    ----- 6. Experience Styles -----
    --------------------------------
*/

#experience {
    padding: 50px 15px;
    text-align: center;
    border-bottom: 1px solid $border;

    h2 {
        color: $heading;
    }
}
/* ... */

